--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jotai": "^2.6.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "redux-persist": "^6.0.0"
